# clir

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test-clir-init.yml  test-clir.yml
clir/: cli.py  command.py
clir/config/: clir.conf
clir/config/db/: schema.sql
clir/tools/: functions.py
clir/utils/: config.py  core.py  db.py  filters.py  objects.py  system.py
tests/: 1-init_clir.py  10-import_export_edges.py  11-filters.py  12-config_utils.py  13-db_utils.py  14-cli_branches.py  15-local_project_db.py  2-add_command.py  3-copy_command.py  4-run_command.py  5-remove_command.py  6-list_command.py  7-import_export_command.py  8-core_utils.py  9-command_branches.py  add_command.py  conftest.py  init_clir.py  remove_command.py
tests/files/: commands.json
tools/: functions.py
