[tool.poetry]
name = "clir"
version = "0.8.1"
description = "A clear and fast way to store and recover your commands"
authors = ["Elkin Aguas <elkinaguas@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/elkinaguas/clir"
repository = "https://github.com/elkinaguas/clir"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elkinaguas/clir/issues"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.5.2"
click = "^8.1.7"
rich-click = "^1.7.0"
textual = "^0.47.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clir = "clir.cli:cli"
init_clir = 'clir.cli:init'