[tool.poetry]
name = "clir"
version = "0.9.0"
description = "A clear and fast way to store and recover your commands"
authors = ["Elkin Aguas <elkinaguas@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/elkinaguas/clir"
repository = "https://github.com/elkinaguas/clir"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elkinaguas/clir/issues"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^14.3.0"
click = "^8.1.7"
rich-click = "^1.9.7"
pygments = "2.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clir = "clir.cli:cli"
init_clir = 'clir.cli:init'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "[0-9]*-*.py"]
